--- a/package.json
+++ b/package.json
@@ -21,27 +21,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mapbox/rehype-prism": "^0.8.0",
-    "@netlify/plugin-nextjs": "4.20",
-    "@tailwindcss/typography": "^0.5.0",
-    "classnames": "^2.3.1",
-    "cypress": "^13.6.1",
-    "gray-matter": "^4.0.2",
+    "@mapbox/rehype-prism": "^0.9.0",
+    "@netlify/plugin-nextjs": "5.11",
+    "@tailwindcss/typography": "^0.5.16",
+    "classnames": "^2.5.1",
+    "cypress": "^14.4.1",
+    "gray-matter": "^4.0.3",
     "next": "latest",
-    "next-mdx-remote": "^4.1.0",
-    "next-remote-watch": "1.0.0",
-    "prismjs": "^1.29.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "remark-gfm": "^3.0.1"
+    "next-mdx-remote": "^5.0.0",
+    "next-remote-watch": "2.0.0",
+    "prismjs": "^1.30.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "eslint": "<9.0.0",
-    "eslint-config-next": "12.2.5",
-    "eslint-config-prettier": "^8.3.0",
-    "netlify-plugin-cypress": "~2.2.0",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0"
+    "@tailwindcss/postcss": "^4.1.8",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "15.3.3",
+    "eslint-config-prettier": "^10.1.5",
+    "netlify-plugin-cypress": "~2.2.1",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8"
   }
 }
